--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/devboost-education/devboost-setup-basic#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.3.0"
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "swiper": "^9.1.1"
   }
 }
