--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/devboost-education/devboost-setup-basic#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "aos": "^2.3.4",
     "swiper": "^9.1.1"
   }
 }
